Documents/Documents/ass4_18CS30018 (1)/assign4/y.output
Terminals unused in grammar

    HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: ID
    2                   | constant
    3                   | STR_LITERAL
    4                   | RO_LBRACE expression RO_RBRACE

    5 constant: INT_CONST
    6         | FLOAT_CONST
    7         | CHAR_CONST

    8 argument_expression_list_opt: argument_expression_list
    9                             | %empty

   10 postfix_expression: primary_expression
   11                   | postfix_expression SQ_LBRACE expression SQ_RBRACE
   12                   | postfix_expression RO_LBRACE argument_expression_list_opt RO_RBRACE
   13                   | postfix_expression DOT ID
   14                   | postfix_expression MEM_OP ID
   15                   | postfix_expression INCREMENT_OP
   16                   | postfix_expression DECREMENT_OP
   17                   | RO_LBRACE type_name RO_RBRACE FL_LBRACE initializer_list FL_RBRACE
   18                   | RO_LBRACE type_name RO_RBRACE FL_LBRACE initializer_list COMMA FL_RBRACE

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT_OP unary_expression
   23                 | DECREMENT_OP unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF RO_LBRACE type_name RO_RBRACE

   27 unary_operator: BIT_AND
   28               | MULT_OP
   29               | ADD_OP
   30               | MINUS_OP
   31               | BIT_COMPL
   32               | NOT_OP

   33 cast_expression: unary_expression
   34                | RO_LBRACE type_name RO_RBRACE cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULT_OP cast_expression
   37                          | multiplicative_expression DIV_OP cast_expression
   38                          | multiplicative_expression REM cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression ADD_OP multiplicative_expression
   41                    | additive_expression MINUS_OP multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression L_SHIFT additive_expression
   44                 | shift_expression R_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LT shift_expression
   47                      | relational_expression GT shift_expression
   48                      | relational_expression LT_EQ shift_expression
   49                      | relational_expression GT_EQ shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ relational_expression
   52                    | equality_expression NEQ relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression BIT_AND equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression BIT_XOR AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression BIT_OR exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression LOGIC_AND inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression LOGIC_OR logical_AND_expression

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression QUERY expression COLON conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: ASSIGN
   68                    | MULT_ASGN
   69                    | DIV_ASGN
   70                    | REM_ASGN
   71                    | ADD_ASGN
   72                    | MINUS_ASGN
   73                    | LS_ASGN
   74                    | RS_ASGN
   75                    | BIT_AND_ASGN
   76                    | BIT_XOR_ASGN
   77                    | BIT_OR_ASGN

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   82 init_declarator_list_opt: %empty
   83                         | init_declarator_list

   84 declaration_specifiers_opt: %empty
   85                           | declaration_specifiers

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list COMMA init_declarator

   92 init_declarator: declarator
   93                | declarator ASSIGN initializer

   94 storage_class_specifier: EXTERN
   95                        | STATIC

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE

  103 specifier_qualifier_list_opt: specifier_qualifier_list
  104                             | %empty

  105 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  106                         | type_qualifier specifier_qualifier_list_opt

  107 type_qualifier: CONST
  108               | RESTRICT
  109               | VOLATILE

  110 function_specifier: INLINE

  111 pointer_opt: pointer
  112            | %empty

  113 declarator: pointer_opt direct_declarator

  114 assignment_expression_opt: assignment_expression
  115                          | %empty

  116 type_qualifier_list_opt: type_qualifier_list
  117                        | %empty

  118 identifier_list_opt: identifier_list
  119                    | %empty

  120 direct_declarator: ID
  121                  | RO_LBRACE declarator RO_RBRACE
  122                  | direct_declarator SQ_LBRACE type_qualifier_list_opt assignment_expression_opt SQ_RBRACE
  123                  | direct_declarator SQ_LBRACE STATIC type_qualifier_list_opt assignment_expression SQ_RBRACE
  124                  | direct_declarator SQ_LBRACE type_qualifier_list STATIC assignment_expression SQ_RBRACE
  125                  | direct_declarator SQ_LBRACE type_qualifier_list_opt MULT_OP SQ_RBRACE
  126                  | direct_declarator RO_LBRACE parameter_type_list RO_RBRACE
  127                  | direct_declarator RO_LBRACE identifier_list_opt RO_RBRACE

  128 pointer: MULT_OP type_qualifier_list_opt
  129        | MULT_OP type_qualifier_list_opt pointer

  130 type_qualifier_list: type_qualifier
  131                    | type_qualifier_list type_qualifier

  132 parameter_type_list: parameter_list
  133                    | parameter_list COMMA VAR_ARG_LIST

  134 parameter_list: parameter_declaration
  135               | parameter_list COMMA parameter_declaration

  136 parameter_declaration: declaration_specifiers declarator
  137                      | declaration_specifiers

  138 identifier_list: ID
  139                | identifier_list COMMA ID

  140 type_name: specifier_qualifier_list

  141 initializer: assignment_expression
  142            | FL_LBRACE initializer_list FL_RBRACE
  143            | FL_LBRACE initializer_list COMMA FL_RBRACE

  144 designation_opt: designation
  145                | %empty

  146 initializer_list: designation_opt initializer
  147                 | initializer_list COMMA designation_opt initializer

  148 designation: designator_list ASSIGN

  149 designator_list: designator
  150                | designator_list designator

  151 designator: SQ_LBRACE constant_expression SQ_RBRACE
  152           | DOT ID

  153 statement: labeled_statement
  154          | compound_statement
  155          | expression_statement
  156          | selection_statement
  157          | iteration_statement
  158          | jump_statement

  159 labeled_statement: ID COLON statement
  160                  | CASE constant_expression COLON statement
  161                  | DEFAULT COLON statement

  162 block_item_list_opt: block_item_list
  163                    | %empty

  164 compound_statement: FL_LBRACE block_item_list_opt FL_RBRACE

  165 block_item_list: block_item
  166                | block_item_list block_item

  167 block_item: declaration
  168           | statement

  169 expression_opt: expression
  170               | %empty

  171 expression_statement: expression_opt SEMI_COLON

  172 selection_statement: IF RO_LBRACE expression RO_RBRACE statement
  173                    | IF RO_LBRACE expression RO_RBRACE statement ELSE statement
  174                    | SWITCH RO_LBRACE expression RO_RBRACE statement

  175 iteration_statement: WHILE RO_LBRACE expression RO_RBRACE statement
  176                    | DO statement WHILE RO_LBRACE expression RO_RBRACE SEMI_COLON
  177                    | FOR RO_LBRACE expression_opt SEMI_COLON expression_opt SEMI_COLON expression_opt RO_RBRACE statement
  178                    | FOR RO_LBRACE declaration expression_opt SEMI_COLON expression_opt RO_RBRACE statement

  179 jump_statement: GOTO ID SEMI_COLON
  180               | CONTINUE SEMI_COLON
  181               | BREAK SEMI_COLON
  182               | RETURN expression_opt SEMI_COLON

  183 translation_unit: external_declaration
  184                 | translation_unit external_declaration

  185 external_declaration: function_definition
  186                     | declaration

  187 declaration_list_opt: declaration_list
  188                     | %empty

  189 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  190 declaration_list: declaration
  191                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BREAK (258) 181
    CASE (259) 160
    CHAR (260) 97
    CONTINUE (261) 180
    DEFAULT (262) 161
    DO (263) 176
    DOUBLE (264) 102
    ELSE (265) 173
    EXTERN (266) 94
    FLOAT (267) 101
    FOR (268) 177 178
    GOTO (269) 179
    IF (270) 172 173
    INT (271) 99
    LONG (272) 100
    RETURN (273) 182
    SHORT (274) 98
    SIZEOF (275) 25 26
    STATIC (276) 95 123 124
    SWITCH (277) 174
    VOID (278) 96
    WHILE (279) 175 176
    CONST (280) 107
    RESTRICT (281) 108
    VOLATILE (282) 109
    INLINE (283) 110
    INT_CONST <intval> (284) 5
    FLOAT_CONST <floatval> (285) 6
    CHAR_CONST <charval> (286) 7
    STR_LITERAL <charval> (287) 3
    ID (288) 1 13 14 120 138 139 152 159 179
    SQ_LBRACE (289) 11 122 123 124 125 151
    SQ_RBRACE (290) 11 122 123 124 125 151
    RO_LBRACE (291) 4 12 17 18 26 34 121 126 127 172 173 174 175 176 177 178
    RO_RBRACE (292) 4 12 17 18 26 34 121 126 127 172 173 174 175 176 177 178
    FL_LBRACE (293) 17 18 142 143 164
    FL_RBRACE (294) 17 18 142 143 164
    DOT (295) 13 152
    MEM_OP (296) 14
    INCREMENT_OP (297) 15 22
    DECREMENT_OP (298) 16 23
    BIT_AND (299) 27 54
    MULT_OP (300) 28 36 125 128 129
    ADD_OP (301) 29 40
    MINUS_OP (302) 30 41
    BIT_COMPL (303) 31
    NOT_OP (304) 32
    DIV_OP (305) 37
    REM (306) 38
    L_SHIFT (307) 43
    R_SHIFT (308) 44
    LT (309) 46
    GT (310) 47
    LT_EQ (311) 48
    GT_EQ (312) 49
    EQ (313) 51
    NEQ (314) 52
    BIT_XOR (315) 56
    BIT_OR (316) 58
    LOGIC_AND (317) 60
    LOGIC_OR (318) 62
    QUERY (319) 64
    COLON (320) 64 159 160 161
    SEMI_COLON (321) 81 171 176 177 178 179 180 181 182
    VAR_ARG_LIST (322) 133
    ASSIGN (323) 67 93 148
    MULT_ASGN (324) 68
    DIV_ASGN (325) 69
    REM_ASGN (326) 70
    ADD_ASGN (327) 71
    MINUS_ASGN (328) 72
    LS_ASGN (329) 73
    RS_ASGN (330) 74
    BIT_AND_ASGN (331) 75
    BIT_XOR_ASGN (332) 76
    BIT_OR_ASGN (333) 77
    COMMA (334) 18 20 79 91 133 135 139 143 147
    HASH (335)
    THEN (336)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    primary_expression (83)
        on left: 1 2 3 4
        on right: 10
    constant (84)
        on left: 5 6 7
        on right: 2
    argument_expression_list_opt (85)
        on left: 8 9
        on right: 12
    postfix_expression (86)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 11 12 13 14 15 16 21
    argument_expression_list (87)
        on left: 19 20
        on right: 8 20
    unary_expression (88)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 66
    unary_operator (89)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression (90)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression (91)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression (92)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression (93)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression (94)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression (95)
        on left: 50 51 52
        on right: 51 52 53 54
    AND_expression (96)
        on left: 53 54
        on right: 54 55 56
    exclusive_OR_expression (97)
        on left: 55 56
        on right: 56 57 58
    inclusive_OR_expression (98)
        on left: 57 58
        on right: 58 59 60
    logical_AND_expression (99)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression (100)
        on left: 61 62
        on right: 62 63 64
    conditional_expression (101)
        on left: 63 64
        on right: 64 65 80
    assignment_expression (102)
        on left: 65 66
        on right: 19 20 66 78 79 114 123 124 141
    assignment_operator (103)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression (104)
        on left: 78 79
        on right: 4 11 64 79 169 172 173 174 175 176
    constant_expression (105)
        on left: 80
        on right: 151 160
    declaration (106)
        on left: 81
        on right: 167 178 186 190 191
    init_declarator_list_opt (107)
        on left: 82 83
        on right: 81
    declaration_specifiers_opt (108)
        on left: 84 85
        on right: 86 87 88 89
    declaration_specifiers (109)
        on left: 86 87 88 89
        on right: 81 85 136 137 189
    init_declarator_list (110)
        on left: 90 91
        on right: 83 91
    init_declarator (111)
        on left: 92 93
        on right: 90 91
    storage_class_specifier (112)
        on left: 94 95
        on right: 86
    type_specifier (113)
        on left: 96 97 98 99 100 101 102
        on right: 87 105
    specifier_qualifier_list_opt (114)
        on left: 103 104
        on right: 105 106
    specifier_qualifier_list (115)
        on left: 105 106
        on right: 103 140
    type_qualifier (116)
        on left: 107 108 109
        on right: 88 106 130 131
    function_specifier (117)
        on left: 110
        on right: 89
    pointer_opt (118)
        on left: 111 112
        on right: 113
    declarator (119)
        on left: 113
        on right: 92 93 121 136 189
    assignment_expression_opt (120)
        on left: 114 115
        on right: 122
    type_qualifier_list_opt (121)
        on left: 116 117
        on right: 122 123 125 128 129
    identifier_list_opt (122)
        on left: 118 119
        on right: 127
    direct_declarator (123)
        on left: 120 121 122 123 124 125 126 127
        on right: 113 122 123 124 125 126 127
    pointer (124)
        on left: 128 129
        on right: 111 129
    type_qualifier_list (125)
        on left: 130 131
        on right: 116 124 131
    parameter_type_list (126)
        on left: 132 133
        on right: 126
    parameter_list (127)
        on left: 134 135
        on right: 132 133 135
    parameter_declaration (128)
        on left: 136 137
        on right: 134 135
    identifier_list (129)
        on left: 138 139
        on right: 118 139
    type_name (130)
        on left: 140
        on right: 17 18 26 34
    initializer (131)
        on left: 141 142 143
        on right: 93 146 147
    designation_opt (132)
        on left: 144 145
        on right: 146 147
    initializer_list (133)
        on left: 146 147
        on right: 17 18 142 143 147
    designation (134)
        on left: 148
        on right: 144
    designator_list (135)
        on left: 149 150
        on right: 148 150
    designator (136)
        on left: 151 152
        on right: 149 150
    statement (137)
        on left: 153 154 155 156 157 158
        on right: 159 160 161 168 172 173 174 175 176 177 178
    labeled_statement (138)
        on left: 159 160 161
        on right: 153
    block_item_list_opt (139)
        on left: 162 163
        on right: 164
    compound_statement (140)
        on left: 164
        on right: 154 189
    block_item_list (141)
        on left: 165 166
        on right: 162 166
    block_item (142)
        on left: 167 168
        on right: 165 166
    expression_opt (143)
        on left: 169 170
        on right: 171 177 178 182
    expression_statement (144)
        on left: 171
        on right: 155
    selection_statement (145)
        on left: 172 173 174
        on right: 156
    iteration_statement (146)
        on left: 175 176 177 178
        on right: 157
    jump_statement (147)
        on left: 179 180 181 182
        on right: 158
    translation_unit (148)
        on left: 183 184
        on right: 0 184
    external_declaration (149)
        on left: 185 186
        on right: 183 184
    declaration_list_opt (150)
        on left: 187 188
        on right: 189
    function_definition (151)
        on left: 189
        on right: 185
    declaration_list (152)
        on left: 190 191
        on right: 187 191


State 0

    0 $accept: . translation_unit $end

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22


State 1

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 2

  102 type_specifier: DOUBLE .

    $default  reduce using rule 102 (type_specifier)


State 3

   94 storage_class_specifier: EXTERN .

    $default  reduce using rule 94 (storage_class_specifier)


State 4

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


State 5

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 7

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 8

   95 storage_class_specifier: STATIC .

    $default  reduce using rule 95 (storage_class_specifier)


State 9

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 10

  107 type_qualifier: CONST .

    $default  reduce using rule 107 (type_qualifier)


State 11

  108 type_qualifier: RESTRICT .

    $default  reduce using rule 108 (type_qualifier)


State 12

  109 type_qualifier: VOLATILE .

    $default  reduce using rule 109 (type_qualifier)


State 13

  110 function_specifier: INLINE .

    $default  reduce using rule 110 (function_specifier)


State 14

  186 external_declaration: declaration .

    $default  reduce using rule 186 (external_declaration)


State 15

   81 declaration: declaration_specifiers . init_declarator_list_opt SEMI_COLON
  189 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    MULT_OP  shift, and go to state 23

    SEMI_COLON  reduce using rule 82 (init_declarator_list_opt)
    $default    reduce using rule 112 (pointer_opt)

    init_declarator_list_opt  go to state 24
    init_declarator_list      go to state 25
    init_declarator           go to state 26
    pointer_opt               go to state 27
    declarator                go to state 28
    pointer                   go to state 29


State 16

   86 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 30
    declaration_specifiers      go to state 31
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 17

   87 declaration_specifiers: type_specifier . declaration_specifiers_opt

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 32
    declaration_specifiers      go to state 31
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 18

   88 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 33
    declaration_specifiers      go to state 31
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 19

   89 declaration_specifiers: function_specifier . declaration_specifiers_opt

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 84 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 34
    declaration_specifiers      go to state 31
    storage_class_specifier     go to state 16
    type_specifier              go to state 17
    type_qualifier              go to state 18
    function_specifier          go to state 19


State 20

    0 $accept: translation_unit . $end
  184 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 35
    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    external_declaration     go to state 36
    function_definition      go to state 22


State 21

  183 translation_unit: external_declaration .

    $default  reduce using rule 183 (translation_unit)


State 22

  185 external_declaration: function_definition .

    $default  reduce using rule 185 (external_declaration)


State 23

  128 pointer: MULT_OP . type_qualifier_list_opt
  129        | MULT_OP . type_qualifier_list_opt pointer

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 117 (type_qualifier_list_opt)

    type_qualifier           go to state 37
    type_qualifier_list_opt  go to state 38
    type_qualifier_list      go to state 39


State 24

   81 declaration: declaration_specifiers init_declarator_list_opt . SEMI_COLON

    SEMI_COLON  shift, and go to state 40


State 25

   83 init_declarator_list_opt: init_declarator_list .
   91 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 41

    $default  reduce using rule 83 (init_declarator_list_opt)


State 26

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


State 27

  113 declarator: pointer_opt . direct_declarator

    ID         shift, and go to state 42
    RO_LBRACE  shift, and go to state 43

    direct_declarator  go to state 44


State 28

   92 init_declarator: declarator .
   93                | declarator . ASSIGN initializer
  189 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13
    ASSIGN    shift, and go to state 45

    FL_LBRACE  reduce using rule 188 (declaration_list_opt)
    $default   reduce using rule 92 (init_declarator)

    declaration              go to state 46
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19
    declaration_list_opt     go to state 48
    declaration_list         go to state 49


State 29

  111 pointer_opt: pointer .

    $default  reduce using rule 111 (pointer_opt)


State 30

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 31

   85 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers_opt)


State 32

   87 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 33

   88 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 34

   89 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 35

    0 $accept: translation_unit $end .

    $default  accept


State 36

  184 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 184 (translation_unit)


State 37

  130 type_qualifier_list: type_qualifier .

    $default  reduce using rule 130 (type_qualifier_list)


State 38

  128 pointer: MULT_OP type_qualifier_list_opt .
  129        | MULT_OP type_qualifier_list_opt . pointer

    MULT_OP  shift, and go to state 23

    $default  reduce using rule 128 (pointer)

    pointer  go to state 50


State 39

  116 type_qualifier_list_opt: type_qualifier_list .
  131 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 116 (type_qualifier_list_opt)

    type_qualifier  go to state 51


State 40

   81 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON .

    $default  reduce using rule 81 (declaration)


State 41

   91 init_declarator_list: init_declarator_list COMMA . init_declarator

    MULT_OP  shift, and go to state 23

    $default  reduce using rule 112 (pointer_opt)

    init_declarator  go to state 52
    pointer_opt      go to state 27
    declarator       go to state 53
    pointer          go to state 29


State 42

  120 direct_declarator: ID .

    $default  reduce using rule 120 (direct_declarator)


State 43

  121 direct_declarator: RO_LBRACE . declarator RO_RBRACE

    MULT_OP  shift, and go to state 23

    $default  reduce using rule 112 (pointer_opt)

    pointer_opt  go to state 27
    declarator   go to state 54
    pointer      go to state 29


State 44

  113 declarator: pointer_opt direct_declarator .
  122 direct_declarator: direct_declarator . SQ_LBRACE type_qualifier_list_opt assignment_expression_opt SQ_RBRACE
  123                  | direct_declarator . SQ_LBRACE STATIC type_qualifier_list_opt assignment_expression SQ_RBRACE
  124                  | direct_declarator . SQ_LBRACE type_qualifier_list STATIC assignment_expression SQ_RBRACE
  125                  | direct_declarator . SQ_LBRACE type_qualifier_list_opt MULT_OP SQ_RBRACE
  126                  | direct_declarator . RO_LBRACE parameter_type_list RO_RBRACE
  127                  | direct_declarator . RO_LBRACE identifier_list_opt RO_RBRACE

    SQ_LBRACE  shift, and go to state 55
    RO_LBRACE  shift, and go to state 56

    $default  reduce using rule 113 (declarator)


State 45

   93 init_declarator: declarator ASSIGN . initializer

    SIZEOF        shift, and go to state 57
    INT_CONST     shift, and go to state 58
    FLOAT_CONST   shift, and go to state 59
    CHAR_CONST    shift, and go to state 60
    STR_LITERAL   shift, and go to state 61
    ID            shift, and go to state 62
    RO_LBRACE     shift, and go to state 63
    FL_LBRACE     shift, and go to state 64
    INCREMENT_OP  shift, and go to state 65
    DECREMENT_OP  shift, and go to state 66
    BIT_AND       shift, and go to state 67
    MULT_OP       shift, and go to state 68
    ADD_OP        shift, and go to state 69
    MINUS_OP      shift, and go to state 70
    BIT_COMPL     shift, and go to state 71
    NOT_OP        shift, and go to state 72

    primary_expression         go to state 73
    constant                   go to state 74
    postfix_expression         go to state 75
    unary_expression           go to state 76
    unary_operator             go to state 77
    cast_expression            go to state 78
    multiplicative_expression  go to state 79
    additive_expression        go to state 80
    shift_expression           go to state 81
    relational_expression      go to state 82
    equality_expression        go to state 83
    AND_expression             go to state 84
    exclusive_OR_expression    go to state 85
    inclusive_OR_expression    go to state 86
    logical_AND_expression     go to state 87
    logical_OR_expression      go to state 88
    conditional_expression     go to state 89
    assignment_expression      go to state 90
    initializer                go to state 91


State 46

  190 declaration_list: declaration .

    $default  reduce using rule 190 (declaration_list)


State 47

   81 declaration: declaration_specifiers . init_declarator_list_opt SEMI_COLON

    MULT_OP  shift, and go to state 23

    SEMI_COLON  reduce using rule 82 (init_declarator_list_opt)
    $default    reduce using rule 112 (pointer_opt)

    init_declarator_list_opt  go to state 24
    init_declarator_list      go to state 25
    init_declarator           go to state 26
    pointer_opt               go to state 27
    declarator                go to state 53
    pointer                   go to state 29


State 48

  189 function_definition: declaration_specifiers declarator declaration_list_opt . compound_statement

    FL_LBRACE  shift, and go to state 92

    compound_statement  go to state 93


State 49

  187 declaration_list_opt: declaration_list .
  191 declaration_list: declaration_list . declaration

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    EXTERN    shift, and go to state 3
    FLOAT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    VOID      shift, and go to state 9
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    INLINE    shift, and go to state 13

    $default  reduce using rule 187 (declaration_list_opt)

    declaration              go to state 94
    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    type_qualifier           go to state 18
    function_specifier       go to state 19


State 50

  129 pointer: MULT_OP type_qualifier_list_opt pointer .

    $default  reduce using rule 129 (pointer)


State 51

  131 type_qualifier_list: type_qualifier_list type_qualifier .

    $default  reduce using rule 131 (type_qualifier_list)


State 52

   91 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 53

   92 init_declarator: declarator .
   93                | declarator . ASSIGN initializer

    ASSIGN  shift, and go to state 45

    $default  reduce using rule 92 (init_declarator)


State 54

  121 direct_declarator: RO_LBRACE declarator . RO_RBRACE

    RO_RBRACE  shift, and go to state 95


State 55

  122 direct_declarator: direct_declarator SQ_LBRACE . type_qualifier_list_opt assignment_expression_opt SQ_RBRACE
  123                  | direct_declarator SQ_LBRACE . STATIC type_qualifier_list_opt assignment_expression SQ_RBRACE
  124                  | direct_declarator SQ_LBRACE . type_qualifier_list STATIC assignment_expression SQ_RBRACE
  125                  | direct_declarator SQ_LBRACE . type_qualifier_list_opt MULT_OP SQ_RBRACE

    STATIC    shift, and go to state 96
    CONST     shift, and go to state 10
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 12

    $default  reduce using rule 117 (type_qualifier_list_opt)

    type_qualifier           go to state 37
    type_qualifier_list_opt  go to state 97
    type_qualifier_list      go to state 98


State 56
